  * Fix --without-zlib build.
  * Optimized cache file loading and dupe file checking speed.
  * Added cachedir config option and NGETCACHE env var.
  * Added --test-multiserver to make -T show which servers have each file.
  * Don't show doarticle linecount warning for servers that report # of bytes counted with LF endings, then send with CRLF.
  * Some portability fixes. (Now builds on SunOS.)

2002-01-23 v0.16:
  * Print info line about each file before beginning retrieval.
  * Fix slow exit with very large midinfo files.
  * In -T mode, only print x/y parts if the post is incomplete, otherwise just print x.
  * Set default --limit to 0.
  * Remove old -L/-S args since noone probably used them anyway (can still be set in .ngetrc).
  * Added -L/--maxlines to complement -l/--limit.
  * Now saves References in cache file.
  * Cache file format change, so switch default NGETHOME to ~/.nget4.
    (Upgrade should be as simple as "mv ~/.nget3 ~/.nget4; rm ~/.nget4/*,cache*")
  * Add heuristic to detect replies to multi-part posts and mark them as complete.  No more need to specify -i to catch replies.
  * Cleaned up retrieving headers progress display when using fullxover=1.
  * Added streaming support for header retrieval, using fullxover should now be many times faster. (and on high ping links, increasing the maxstreaming setting can improve the speed even more.)
  * Force stdout to be line buffered. (Keeps stdout and stderr from getting out of sync when redirecting both to a file.)
  * Force single-part posts with no body to be handled as text. (As opposed to giving a "No encoded data found" error and keeping the temp file)
  * Better error handling on writing cache/midinfo files.

2001-11-24 - v0.15.2:
  * Fix -df with filenames that begin or end in "non-word" chars since the \< and \> will not match because there is no word boundry in such a case. (reported by Bernhard Josef Rieder)